--- a/tailwind.css
+++ b/tailwind.css
@@ -24,6 +24,10 @@
     animation: walk 30s ease-in-out alternate infinite;
   }
 
+  .buttonSummaryDot:disable .dotUnit {
+    background-color: #f8f8f8;
+  }
+
   /* Disable scroll once drawer/modal is openned */
   body:has(.drawer-toggle:checked),
   body:has(.modal-toggle:checked) {
