--- a/tailwind.css
+++ b/tailwind.css
@@ -28,6 +28,45 @@
     background-color: #f8f8f8;
   }
 
+  .popUpSuperLojas {
+    width: 298px;
+    height: 205px;
+    background-color: #ffff;
+    left: -150px;
+    top: 50px;
+    z-index: 9999999;
+    background-repeat: no-repeat;
+    text-align: end;
+  }
+
+  .containerSuperLojas {
+    display: block;
+    text-align: center;
+    font-size: 25px;
+    position: absolute;
+    top: 20px;
+    right: 7px;
+    width: auto;
+    border: 2px solid #fff;
+    border-radius: 8px;
+    padding: 15px 37px 3px 37px;
+  }
+
+  .conhecanossaslojas {
+    background-color: #F8A531;
+    text-transform: lowercase;
+    text-align: center;
+    border-radius: 30px;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 3px 11px;
+    font-weight: lighter;
+    position: absolute;
+    right: 25px;
+    z-index: 1;
+    font-size: 13px;
+  }
+
   /* Disable scroll once drawer/modal is openned */
   body:has(.drawer-toggle:checked),
   body:has(.modal-toggle:checked) {
